--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/holepunchto/hyper-cmd-lib-utils.git"
   },
   "author": "Paolo Ardoino (@prdn)",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/holepunchto/hyper-cmd-lib-utils/issues"
   },
